--- a/Assignment #13.ipynb
+++ b/Assignment #13.ipynb
@@ -24,10 +24,10 @@
    "source": [
     "## Stage One: Import or collect your data as appropriate, using OS or an API\n",
     "\n",
-    "documented at: https://towardsdatascience.com/web-scraping-metacritic-reviews-using-beautifulsoup-63801bbe200e\n",
+    "Web Scraping Metacritic Reviews using BeautifulSoup \"A simple 6-step guide to scraping Metacritic game reviews using BeautifulSoup and saving them into a pandas dataframe.documented\" at: https://towardsdatascience.com/web-scraping-metacritic-reviews-using-beautifulsoup-63801bbe200e\n",
     "#we're going back to week six to import reviews, but this time we're getting all of them!\n",
     "\n",
-    "Comfort has been established as BeautifulSoup enable for movmenmet to work without and API.\n",
+    "Comfort has been established as BeautifulSoup enables movement to work without an API.\n",
     "\n",
     "(Karsdorp, Kestemont, and Riddell)."
    ]
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pandas dataframe was accomplished smoothly. Which bring sin the fun lines"
+    "Creating Pandas' data frame was a smooth process, which contributed to the fun lines."
    ]
   },
   {
@@ -141,7 +141,7 @@
    "source": [
     "## Stage Three: Use NLTK to tokenize the data, and chart a word cloud\n",
     "\n",
-    "used to clean up and help remove characters etc. As beutiful soup enabled great aspects of setup of cleaning.\n",
+    "Used to clean up and help remove characters etc., as BeautifulSoup enabled significant aspects of cleaning setup.\n",
     "\n",
     "(Karsdorp, Kestemont, and Riddell)."
    ]
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "stop words assciated toward limiting items twoard being helpful."
+    "Stop words associated with limiting items toward being helpful."
    ]
   },
   {
@@ -226,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "used variance in code and color and size."
+    "Used variance in code and color, and size enabled for visualized experimentation and expression."
    ]
   },
   {
@@ -282,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "took out subplots and change toward color variance of color.  Fund fixed color number and played with the range. higher resoution image is better."
+    "Took out subplots and changed toward color variance of color.  Fund fixed color numbers and played with the range. A higher resolution image is better."
    ]
   },
   {
@@ -332,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "sentiment score brought interest -to chart differences of score of sentiment score becomes the range of judgement etc of rating."
+    "A sentiment drew interest in charting differences in a sentiment score, which became the range of judgments, etc."
    ]
   },
   {
@@ -573,7 +573,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "new with color palets etc. tried jitter and palettes import. reveiew scores are numerial were as the jitter brings in due to it being applied to the bar o space."
+    "New with color pallets etc., tried jitter and palettes import. Review scores are numerical were as the jitter brings in due to being applied to the bar o space."
    ]
   },
   {
@@ -601,7 +601,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "experiemented with range and size of indicators etc."
+    "I experimented with the range and size of indicators, etc."
    ]
   },
   {
@@ -625,7 +625,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "html visual presentation, even though it is light in modes it does show seperation of scores of sentiment etc. seperated by light and dark components."
+    "Even though it is light in modes, HTML visual presentation does show the separation of scores of sentiment, etc., separated by light and dark components."
    ]
   },
   {
