--- a/Assignment #13.ipynb
+++ b/Assignment #13.ipynb
@@ -13,9 +13,7 @@
     "- Created a \"wordcloud of interest\" by playing with the visualization methods from the class demo, with others documented in the API\n",
     "- Imported Bokeh, charting some aspect of the text (wordcount, topics, or sentiment analysis as demoed)\n",
     "\n",
-    "Note: Considered exploring other visualization types in the Bokeh API documentation, and played with the color options and scale of the visualization.\n",
-    "\n",
-    "(Karsdorp, Kestemont, and Riddell).\n"
+    "Note: Considered exploring other visualization types in the Bokeh API documentation, and played with the color options and scale of the visualization as adopting “good enough practices in scientific computing (Wilson et al. 2017) identify a minimal set of practices which every researcher can adopt, regardless of their current level of computational skill” (Karsdorp, Kestemont, Riddell 323) allows for the continuation of code exploration to the fullest.\n"
    ]
   },
   {
@@ -27,9 +25,9 @@
     "Web Scraping Metacritic Reviews using BeautifulSoup \"A simple 6-step guide to scraping Metacritic game reviews using BeautifulSoup and saving them into a pandas dataframe.documented\" at: https://towardsdatascience.com/web-scraping-metacritic-reviews-using-beautifulsoup-63801bbe200e\n",
     "#we're going back to week six to import reviews, but this time we're getting all of them!\n",
     "\n",
-    "Comfort has been established as BeautifulSoup enables movement to work without an API.\n",
+    "Comfort has been established as BeautifulSoup enables movement to work without an API. so enforncement of starting \"with a problem or a question. If your problem or question is not well defined, develop or find one which is” (Karsdorp, Kestemont, Riddell 323).\n",
     "\n",
-    "(Karsdorp, Kestemont, and Riddell)."
+    "\n"
    ]
   },
   {
@@ -52,7 +50,7 @@
     "## Stage Two: Make and structure your data in a Pandas dataframe\n",
     "use of explirng the URL of interest, https://www.metacritic.com/game/playstation-3/the-walking-dead-a-telltale-games-series/user-reviews?page=\n",
     "\n",
-    "(Karsdorp, Kestemont, and Riddell)."
+    "“Consider many models. Different narratives are often compatible with the same set of observations” (Karsdorp, Kestemont, Riddell 324). \n"
    ]
   },
   {
@@ -88,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creating Pandas' data frame was a smooth process, which contributed to the fun lines."
+    "Creating Pandas' data frame was a smooth process, which contributed to the fun lines. “Account for variability in human judgments. If your research relies on human labeling or categorization of features of cultural artifacts, verify that different humans agree” (Karsdorp, Kestemont, Riddell 324).\n"
    ]
   },
   {
@@ -141,9 +139,9 @@
    "source": [
     "## Stage Three: Use NLTK to tokenize the data, and chart a word cloud\n",
     "\n",
-    "Used to clean up and help remove characters etc., as BeautifulSoup enabled significant aspects of cleaning setup.\n",
+    "Used to clean up and help remove characters etc., as BeautifulSoup enabled significant aspects of cleaning setup. “Explore ideas from math and (Bayesian) statistics. Good ideas are found everywhere” (Karsdorp, Kestemont, Riddell 324).\n",
     "\n",
-    "(Karsdorp, Kestemont, and Riddell)."
+    "\n"
    ]
   },
   {
@@ -206,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Stop words associated with limiting items toward being helpful."
+    "Stop words associated with limiting items toward being helpful. “In the documentary film DNA Dreams, viewers are taken inside of “the world’s largest genomics organization,” which is based in Shenzhen, China. Thousands of scientists are working there to uncover the genetics of intelligence (among other traits)” (Benjamin 114). "
    ]
   },
   {
@@ -226,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Used variance in code and color, and size enabled for visualized experimentation and expression."
+    "Used variance in code and color, and size enabled for visualized experimentation and expression. “The creation of digital assets will then serve the project’s overall design” (Drucker 193).\n"
    ]
   },
   {
@@ -261,8 +259,7 @@
    "metadata": {},
    "source": [
     "## Stage Four: Create a \"wordcloud of interest\" by playing with the visualization methods from the class demo, or others documented in the API\n",
-    "\n",
-    "(Karsdorp, Kestemont, and Riddell)."
+    "\n"
    ]
   },
   {
@@ -324,15 +321,14 @@
    "metadata": {},
    "source": [
     "## Stage Five: Import Bokeh and chart some aspect of the text: this could be the wordcount, topics, or sentiment analysis as demoed\n",
-    "\n",
-    "(Karsdorp, Kestemont, and Riddell)."
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A sentiment drew interest in charting differences in a sentiment score, which became the range of judgments, etc."
+    "A sentiment drew interest in charting differences in a sentiment score, which became the range of judgments, etc. “Knowledge of the existing tools and platforms for this aspect of research is important” (Drucker 199).\n"
    ]
   },
   {
@@ -601,7 +597,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I experimented with the range and size of indicators, etc."
+    "I experimented with the range and size of indicators, etc. “A platform with a broad user community is more likely to last—and to provide help support in the form of list-servs and other venues” (Drucker 199)."
    ]
   },
   {
@@ -625,7 +621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Even though it is light in modes, HTML visual presentation does show the separation of scores of sentiment, etc., separated by light and dark components."
+    "Even though it is light in modes, HTML visual presentation does show the separation of scores of sentiment, etc., separated by light and dark components. “But a repository like GitHub (though, actually, there are not many “like” it) is an invaluable resource for anyone working on digital project development” (Drucker 208).\n"
    ]
   },
   {
