--- a/Assignment #13.ipynb
+++ b/Assignment #13.ipynb
@@ -22,10 +22,9 @@
    "source": [
     "## Stage One: Import or collect your data as appropriate, using OS or an API\n",
     "\n",
-    "Web Scraping Metacritic Reviews using BeautifulSoup \"A simple 6-step guide to scraping Metacritic game reviews using BeautifulSoup and saving them into a pandas dataframe.documented\" at: https://towardsdatascience.com/web-scraping-metacritic-reviews-using-beautifulsoup-63801bbe200e\n",
-    "#we're going back to week six to import reviews, but this time we're getting all of them!\n",
+    "Web Scraping Metacritic Reviews using BeautifulSoup \"A simple 6-step guide to scraping Metacritic game reviews using BeautifulSoup and saving them into a pandas dataframe.documented\" at: https://towardsdatascience.com/web-scraping-metacritic-reviews-using-beautifulsoup-63801bbe200e. Opening up the possibility to return to week six's import reviews, but with an enhancement of including them all this time around.\n",
     "\n",
-    "Comfort has been established as BeautifulSoup enables movement to work without an API. so enforncement of starting \"with a problem or a question. If your problem or question is not well defined, develop or find one which is” (Karsdorp, Kestemont, Riddell 323).\n",
+    "Here comfort has been established as BeautifulSoup enables movement to work without an API. So enforcement of starting \"with a problem or a question. If your problem or question is not well defined, develop or find one which is\" (Karsdorp, Kestemont, Riddell 323) comes alive.\n",
     "\n",
     "\n"
    ]
@@ -48,9 +47,8 @@
    "metadata": {},
    "source": [
     "## Stage Two: Make and structure your data in a Pandas dataframe\n",
-    "use of explirng the URL of interest, https://www.metacritic.com/game/playstation-3/the-walking-dead-a-telltale-games-series/user-reviews?page=\n",
     "\n",
-    "“Consider many models. Different narratives are often compatible with the same set of observations” (Karsdorp, Kestemont, Riddell 324). \n"
+    "With the use of exploring the URL of interest, https://www.metacritic.com/game/playstation-3/the-walking-dead-a-telltale-games-series/user-reviews?page=, it allowed for the process to “Consider many models. Different narratives are often compatible with the same set of observations” (Karsdorp, Kestemont, Riddell 324). "
    ]
   },
   {
@@ -86,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creating Pandas' data frame was a smooth process, which contributed to the fun lines. “Account for variability in human judgments. If your research relies on human labeling or categorization of features of cultural artifacts, verify that different humans agree” (Karsdorp, Kestemont, Riddell 324).\n"
+    "Creating Pandas' data frame was a smooth process, which contributed to the fun lines allowing for an \"Account for variability in human judgments... verify that different humans agree\" (Karsdorp, Kestemont, Riddell 324).\n"
    ]
   },
   {
@@ -139,8 +137,7 @@
    "source": [
     "## Stage Three: Use NLTK to tokenize the data, and chart a word cloud\n",
     "\n",
-    "Used to clean up and help remove characters etc., as BeautifulSoup enabled significant aspects of cleaning setup. “Explore ideas from math and (Bayesian) statistics. Good ideas are found everywhere” (Karsdorp, Kestemont, Riddell 324).\n",
-    "\n",
+    "Used to clean up and help remove characters etc., as BeautifulSoup enabled significant aspects of cleaning setup, exploring \"ideas from math and (Bayesian) statistics. Good ideas are found everywhere\" (Karsdorp, Kestemont, Riddell 324).\n",
     "\n"
    ]
   },
@@ -204,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Stop words associated with limiting items toward being helpful. “In the documentary film DNA Dreams, viewers are taken inside of “the world’s largest genomics organization,” which is based in Shenzhen, China. Thousands of scientists are working there to uncover the genetics of intelligence (among other traits)” (Benjamin 114). "
+    "Stop words associated with limiting items toward being helpful as “In the documentary film DNA Dreams, viewers are taken inside of “the world’s largest genomics organization,” ...Thousands of scientists are working there to uncover the genetics of intelligence (among other traits)” (Benjamin 114). "
    ]
   },
   {
@@ -224,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Used variance in code and color, and size enabled for visualized experimentation and expression. “The creation of digital assets will then serve the project’s overall design” (Drucker 193).\n"
+    "Used variance in code and color, and size enabled for visualized experimentation and expression, as \"The creation of digital assets will then serve the project's overall design\" (Drucker 193).\n"
    ]
   },
   {
@@ -328,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A sentiment drew interest in charting differences in a sentiment score, which became the range of judgments, etc. “Knowledge of the existing tools and platforms for this aspect of research is important” (Drucker 199).\n"
+    "A sentiment drew interest in charting differences in a sentiment score, which became the range of judgments, allowing for the “Knowledge of the existing tools and platforms for this aspect of research is important” (Drucker 199).\n"
    ]
   },
   {
@@ -569,7 +566,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "New with color pallets etc., tried jitter and palettes import. Review scores are numerical were as the jitter brings in due to being applied to the bar o space."
+    "New with color pallets etc., tried jitter and palettes import. Review scores are numerical were as the jitter brings in due to being applied to the bar space."
    ]
   },
   {
@@ -597,7 +594,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I experimented with the range and size of indicators, etc. “A platform with a broad user community is more likely to last—and to provide help support in the form of list-servs and other venues” (Drucker 199)."
+    "I experimented with the range and size of indicators, etc., “A platform with a broad user community is more likely to last—and to provide help support in the form of list-servs and other venues” (Drucker 199)."
    ]
   },
   {
@@ -621,7 +618,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Even though it is light in modes, HTML visual presentation does show the separation of scores of sentiment, etc., separated by light and dark components. “But a repository like GitHub (though, actually, there are not many “like” it) is an invaluable resource for anyone working on digital project development” (Drucker 208).\n"
+    "Even though it is light in modes, HTML visual presentation does show the separation of scores of sentiment, etc., separated by light and dark components, as a repository like GitHub ...is an invaluable resource for anyone working on digital project development” (Drucker 208).\n"
    ]
   },
   {
