--- a/Assignment #13.ipynb
+++ b/Assignment #13.ipynb
@@ -13,7 +13,7 @@
     "- Created a \"wordcloud of interest\" by playing with the visualization methods from the class demo, with others documented in the API\n",
     "- Imported Bokeh, charting some aspect of the text (wordcount, topics, or sentiment analysis as demoed)\n",
     "\n",
-    "Note: Considered exploring other visualization types in the Bokeh API documentation, and played with the color options and scale of the visualization as adopting “good enough practices in scientific computing (Wilson et al. 2017) identify a minimal set of practices which every researcher can adopt, regardless of their current level of computational skill” (Karsdorp, Kestemont, Riddell 323) allows for the continuation of code exploration to the fullest.\n"
+    "NOTE: Considered exploring other visualization types in the Bokeh API documentation, and played with the color options and scale of the visualization as adopting “good enough practices in scientific computing (Wilson et al. 2017) identify a minimal set of practices which every researcher can adopt, regardless of their current level of computational skill” (Karsdorp, Kestemont, Riddell 323) allows for the continuation of code exploration to the fullest.\n"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "source": [
     "## Stage Two: Make and structure your data in a Pandas dataframe\n",
     "\n",
-    "With the use of exploring the URL of interest, https://www.metacritic.com/game/playstation-3/the-walking-dead-a-telltale-games-series/user-reviews?page=, it allowed for the process to “Consider many models. Different narratives are often compatible with the same set of observations” (Karsdorp, Kestemont, Riddell 324). "
+    "With the use of exploring the URL of interest, https://www.metacritic.com/game/playstation-3/the-walking-dead-a-telltale-games-series/user-reviews?page=, it allowed for the process to \"Consider many models. Different narratives are often compatible with the same set of observations\" (Karsdorp, Kestemont, Riddell 324). The choice was timely and taken from the influence of lessons and my recent viewing of the show \"The Walking Dead,\" with the election of use of playing the video game."
    ]
   },
   {
