--- a/Assignment #15.ipynb
+++ b/Assignment #15.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,12 +86,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Collect data using a Tweepy stream (example annotation)\n",
     "# (Copy and modify code from other exercises to prototype this goal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Python Package imports\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "from dateutil.parser import parse\n",
+    "import concurrent.futures\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -103,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,43 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                name          date rating  \\\n",
-      "0           chujfugh  Dec 12, 2012     10   \n",
-      "1      the_blueprint  Dec 11, 2013      8   \n",
-      "2    SayHeyToPhillip  Jun 27, 2014      9   \n",
-      "3     TheOnlineGamer  Jan 13, 2014     10   \n",
-      "4          HSPLazerz  May  8, 2015     10   \n",
-      "..               ...           ...    ...   \n",
-      "111           Folmer  Feb 23, 2019     10   \n",
-      "112           Xalted  Oct 22, 2019     10   \n",
-      "113          INU4SH4  Jul  3, 2020      9   \n",
-      "114     EndlessAbyss  Sep 27, 2020     10   \n",
-      "115     kappawappa23  Apr  5, 2021     10   \n",
-      "\n",
-      "                                                review  \n",
-      "0    For 30 years, games have been held back by the...  \n",
-      "1    I like the game because the story and characte...  \n",
-      "2    The Walking Dead gathers everything from enter...  \n",
-      "3    Captures the essence of The Walking Dead Comic...  \n",
-      "4    By far, the best game I have ever, and will ev...  \n",
-      "..                                                 ...  \n",
-      "111  This game has a really great story, and it is ...  \n",
-      "112  This and Season 4 are the 2 best games I have ...  \n",
-      "113  The Walking Dead is a genre-defining title for...  \n",
-      "114  this game is the best telltale game by far and...  \n",
-      "115  Top Game. Emotional Game. Perfect. Story. For ...  \n",
-      "\n",
-      "[116 rows x 4 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ac_reviews = pd.DataFrame(review_dict)\n",
     "print(ac_reviews)"
