--- a/Assignment #15 (IMDb) exp.ipynb
+++ b/Assignment #15 (IMDb) exp.ipynb
@@ -20,8 +20,6 @@
     "Race After Technology: Chapter 5\n",
     "Digital Humanities Coursebook: Coda\n",
     "\n",
-    "(Karsdorp, Kestemont, and Riddell).\n",
-    "\n",
     "And to help push the technical philosophy further and keep the process moving was knowing that \"An interface is a set of cognitive cues. It may look like a screen full of pictures of things inside the computer, but in fact, the interface mediates between an individual the computational activity\" (Drucker 176)."
    ]
   },
@@ -29,9 +27,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When people change how they speak or act in order to conform to dominant norms, we call it “code-switching.” Benjamin, Ruha. Race After Technology (p. 180). Wiley. Kindle Edition. \n",
+    "\"When people change how they speak or act in order to conform to dominant norms, we call it “code-switching”\" (Benjamin 180). \n",
     "\n",
-    "Data, in short, do not speak for themselves and don’t always change hearts and minds or policy. Benjamin, Ruha. Race After Technology (p. 192). Wiley. Kindle Edition. "
+    "\"Data, in short, do not speak for themselves and don’t always change hearts and minds or policy\" (Benjamin 192). "
    ]
   },
   {
