--- a/Assignment #15 (IMDb).ipynb
+++ b/Assignment #15 (IMDb).ipynb
@@ -17,13 +17,8 @@
     "\n",
     "Note where you have something working, and where it's broken or in progress.\n",
     "\n",
-    "And to help push the technical philosophy further and keep the process moving was knowing that \"An interface is a set of cognitive cues. It may look like a screen full of pictures of things inside the computer, but in fact, the interface mediates between an individual the computational activity\" (Drucker 176)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "And to help push the technical philosophy further and keep the process moving was knowing that \"An interface is a set of cognitive cues. It may look like a screen full of pictures of things inside the computer, but in fact, the interface mediates between an individual the computational activity\" (Drucker 176).\n",
+    "\n",
     "\"When people change how they speak or act in order to conform to dominant norms, we call it “code-switching”\" (Benjamin 180). \n",
     "\n",
     "\"Data, in short, do not speak for themselves and don’t always change hearts and minds or policy\" (Benjamin 192). "
@@ -35,7 +30,7 @@
    "source": [
     "## Project Overview: IMDb\n",
     "\n",
-    "(Replace this text with a short description of what your envisioned project design will accomplish. Include your research question and goals for this analysis.)"
+    "Using Beautiful Soup, I wanted to show the process of bringing in the elements scraped from IMDb data for this inquiry."
    ]
   },
   {
@@ -45,21 +40,16 @@
     "\n",
     "## Stage One: Dependencies\n",
     "\n",
-    "Add the import code for every dependency of your project: for instance, if you are collecting data, you might import Tweepy or BeautifulSoup. If you're working with a file of folders, import os. Most projects will require Pandas, along with appropriate processing and visualization libraries. In the comments, explain briefly why you are including each library (as shown in the example below.)\n"
+    "As a result, comfort has been established as BeautifulSoup enables movement to work without an API. Enforcing beginning with \"a problem or a question. If your problem or question is not well defined, develop or find one which is\" (Karsdorp, Kestemont, Riddell 323) comes alive.\n",
+    "\n",
+    "With the help of the path being \"director/,\" I was off and running, as \"An interface can connect a person with a computer.., a computer with a computer (as in an API)\" (Drucker 172).\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As a result, comfort has been established as BeautifulSoup enables movement to work without an API. Enforcing beginning with \"a problem or a question. If your problem or question is not well defined, develop or find one which is\" (Karsdorp, Kestemont, Riddell 323) comes alive."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To keep the direction within my API  perspectives explored this semester, I brought in Wikipedia subjects pertaining to a diverse director focus in the film and entertainment industry. This was a new but warranted area to examine due to practicing something off the grid with a Python app toward finding a minor query. With the help of the path being \"director/,\" I was off and running, as \"An interface can connect a person with a computer.., a computer with a computer (as in an API)\" (Drucker 172)."
+    "Other than representing my abbreviations of identity, IMDb is an Amazon setup toward the entertainment industry about film and cinema. I am bringing information attainable at the primary level toward consumer interest of film backgrounds to IMDb Pro stipulations that aid industry searches toward gaining knowledge and industry contacts. And with the enforcement of Beautiful Soup, the process begins packaged."
    ]
   },
   {
@@ -84,6 +74,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With Python's API, the need to draw IMDb data from an abundance of online URLs is accomplished with the \"Thread\" directional tool."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -91,6 +88,13 @@
    "source": [
     "# Maximum number of threads that will be spawned\n",
     "MAX_THREADS = 50"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below were the adjustments made with the focus of attributes of interest ranging from \"movie_title_arr\" to \"image_id_arr.\""
    ]
   },
   {
@@ -105,6 +109,13 @@
     "movie_synopsis_arr =[]\n",
     "image_url_arr  = []\n",
     "image_id_arr = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below was the phase of Scraping the elements above collected toward introducing us to Beautiful Soup."
    ]
   },
   {
@@ -151,6 +162,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Through IMDb data, the foster function responsible for iteration is derived. Now, extraction occurs and formulates. URL elements are then explored and filtered to push this journey forward. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -191,6 +209,13 @@
     "        \n",
     "        image_id = image.get('data-tconst')\n",
     "        image_id_arr.append(image_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Progression is realized assembled below in the relational URLs formulating filtered films. "
    ]
   },
   {
@@ -272,6 +297,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The downloading function of \"download_stories\"  brings the URLs toward a primary function teamed up with the \"MAX_THREADS\" number of acceptance of requests."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -281,6 +313,13 @@
     "    threads = min(MAX_THREADS, len(story_urls))\n",
     "    with concurrent.futures.ThreadPoolExecutor(max_workers=threads) as executor:\n",
     "        executor.map(main, story_urls)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the end, the download function progresses our pursuit toward attaining the required and requested data."
    ]
   },
   {
@@ -301,6 +340,13 @@
     "    \"image_url\": image_url_arr,\n",
     "    \"image_id\": image_id_arr,\n",
     "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As a result, IMDB is attainable and readable toward analyzing a progressed data collection."
    ]
   },
   {
