--- a/Assignment #15.ipynb
+++ b/Assignment #15.ipynb
@@ -27,6 +27,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\"When people change how they speak or act in order to conform to dominant norms, we call it “code-switching”\" (Benjamin 180). \n",
+    "\n",
+    "\"Data, in short, do not speak for themselves and don’t always change hearts and minds or policy\" (Benjamin 192). \n",
+    "\n",
+    "And to help push the technical philosophy further and keep the process moving was knowing that \"An interface is a set of cognitive cues. It may look like a screen full of pictures of things inside the computer, but in fact, the interface mediates between an individual the computational activity\" (Drucker 176)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Project Overview: NaNoGenMo\n",
     "This sample project builds on our previous exercises inspired by National Novel Generation Month. It offers a framework for exporing text generation based upon children's literature, inspired by NaNoGenMo's call to think about different forms of procedural making. As such, it is guided by that project's rule: \"Spend the month of November writing code that generates a novel of 50k+ words.\"\n",
     "\n",
