--- a/Assignment #15 (IMDb).ipynb
+++ b/Assignment #15 (IMDb).ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Project Overview: IMDb\n",
+    "## BONUS Project Overview: IMDb\n",
     "\n",
     "Using Beautiful Soup, I wanted to show the process of bringing in the elements scraped from IMDb data for this inquiry."
    ]
