--- a/Assignment #15 (IMDb).ipynb
+++ b/Assignment #15 (IMDb).ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -402,21 +402,21 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Ted Lasso</td>\n",
-       "      <td>(2020– )</td>\n",
-       "      <td>\\nComedy, Drama, Sport</td>\n",
-       "      <td>\\nAmerican college football coach Ted Lasso he...</td>\n",
-       "      <td>https://m.media-amazon.com/images/M/MV5BMDVmOD...</td>\n",
-       "      <td>tt10986410</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>Bruised</td>\n",
        "      <td>(2020)</td>\n",
        "      <td>\\nDrama, Sport</td>\n",
        "      <td>\\nA disgraced MMA fighter finds redemption in ...</td>\n",
        "      <td>https://m.media-amazon.com/images/M/MV5BMWRjZG...</td>\n",
        "      <td>tt8310474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ted Lasso</td>\n",
+       "      <td>(2020– )</td>\n",
+       "      <td>\\nComedy, Drama, Sport</td>\n",
+       "      <td>\\nAmerican college football coach Ted Lasso he...</td>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BMDVmOD...</td>\n",
+       "      <td>tt10986410</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -429,41 +429,41 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Tiger King</td>\n",
-       "      <td>(2020–2021)</td>\n",
-       "      <td>\\nDocumentary, Biography, Crime</td>\n",
-       "      <td>\\nA rivalry between big cat eccentrics takes a...</td>\n",
-       "      <td>https://m.media-amazon.com/images/M/MV5BYzI5Mj...</td>\n",
-       "      <td>tt11823076</td>\n",
+       "      <td>The Little Things</td>\n",
+       "      <td>(2021)</td>\n",
+       "      <td>\\nCrime, Drama, Mystery</td>\n",
+       "      <td>\\nKern County Deputy Sheriff Joe Deacon is sen...</td>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BOGFlNT...</td>\n",
+       "      <td>tt10016180</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Title Release_Year                                        Genre  \\\n",
-       "0    The Great     (2020– )       \\nBiography, Comedy, Drama               \n",
-       "1    Ted Lasso     (2020– )           \\nComedy, Drama, Sport               \n",
-       "2      Bruised       (2020)                   \\nDrama, Sport               \n",
-       "3  Locke & Key     (2020– )         \\nDrama, Fantasy, Horror               \n",
-       "4   Tiger King  (2020–2021)  \\nDocumentary, Biography, Crime               \n",
+       "               Title Release_Year                                   Genre  \\\n",
+       "0          The Great     (2020– )  \\nBiography, Comedy, Drama               \n",
+       "1            Bruised       (2020)              \\nDrama, Sport               \n",
+       "2          Ted Lasso     (2020– )      \\nComedy, Drama, Sport               \n",
+       "3        Locke & Key     (2020– )    \\nDrama, Fantasy, Horror               \n",
+       "4  The Little Things       (2021)     \\nCrime, Drama, Mystery               \n",
        "\n",
        "                                            Synopsis  \\\n",
        "0  \\nA royal woman living in rural Russia during ...   \n",
-       "1  \\nAmerican college football coach Ted Lasso he...   \n",
-       "2  \\nA disgraced MMA fighter finds redemption in ...   \n",
+       "1  \\nA disgraced MMA fighter finds redemption in ...   \n",
+       "2  \\nAmerican college football coach Ted Lasso he...   \n",
        "3  \\nAfter their father is murdered under mysteri...   \n",
-       "4  \\nA rivalry between big cat eccentrics takes a...   \n",
+       "4  \\nKern County Deputy Sheriff Joe Deacon is sen...   \n",
        "\n",
        "                                           image_url    image_id  \n",
        "0  https://m.media-amazon.com/images/M/MV5BYzVmOG...   tt2235759  \n",
-       "1  https://m.media-amazon.com/images/M/MV5BMDVmOD...  tt10986410  \n",
-       "2  https://m.media-amazon.com/images/M/MV5BMWRjZG...   tt8310474  \n",
+       "1  https://m.media-amazon.com/images/M/MV5BMWRjZG...   tt8310474  \n",
+       "2  https://m.media-amazon.com/images/M/MV5BMDVmOD...  tt10986410  \n",
        "3  https://m.media-amazon.com/images/M/MV5BNmYyNW...   tt3007572  \n",
-       "4  https://m.media-amazon.com/images/M/MV5BYzI5Mj...  tt11823076  "
+       "4  https://m.media-amazon.com/images/M/MV5BOGFlNT...  tt10016180  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,6 +473,42 @@
     "\n",
     "# movie.to_csv('file.csv', index=False) : If you want to store the file.\n",
     "movieDf.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Synopsis' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_100744/3710159887.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mwords\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSynopsis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Topic 2'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mascending\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m18\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mwords\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mmatplotlib\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mwordcloud\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mWordCloud\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mSTOPWORDS\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Synopsis' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "words = Synopsis.loc['Topic 2'].sort_values(ascending=False).head(18)\n",
+    "words \n",
+    "\n",
+    "from matplotlib import pyplot as plt\n",
+    "from wordcloud import WordCloud, STOPWORDS\n",
+    "import matplotlib.colors as mcolors\n",
+    "\n",
+    "print(Synopsis.loc['Topic 2'].head(20))\n",
+    "\n",
+    "# Create and generate a word cloud image:\n",
+    "wordcloud = WordCloud().generate_from_frequencies(words)\n",
+    "\n",
+    "# Display the generated image:\n",
+    "plt.imshow(wordcloud, interpolation='bilinear')\n",
+    "plt.axis(\"off\")\n",
+    "plt.show()"
    ]
   }
  ],
