--- a/Assignment FINAL.ipynb
+++ b/Assignment FINAL.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Exercise Fourteen: Project Design Starter\n",
-    "In this exercise, you'll be planning out a complex project. You'll draw in some code, but focus on commenting to describe your project structure. The sample document below will guide you through organizing and annotating your project design. The primary components you'll include are:\n",
+    "Bringing in elements to enable the possibility for complexity in areas of focus of a project of choice. There was code of interest from the beginning, and future that has allowed the creativity with based structure to exist. So, in relation to a expository through \"organizing and annotating\" the possibility of a workable project design using the a set of primary components of:\n",
     "\n",
     "- Dependencies: What modules will your project need?\n",
     "- Collection: Where is your data coming from?\n",
@@ -13,11 +13,107 @@
     "- Analysis: What techniques will you use to understand your data?\n",
     "- Visualization: How will you visualize and explore your data?\n",
     "\n",
-    "Don't worry if you aren't exactly certain how you would implement everything - this should be a starting point for a larger research study, but it doesn't need to be a complete, functional workflow. Aim for a \"good enough\" starting point that you can reference and extend for future work.\n",
-    "\n",
-    "Note where you have something working, and where it's broken or in progress.\n",
+    "And with the openness of not being strict guidlines to complete and implement coding for the project fully, it allowed for the thought and imagination toward beginning in theory toward use in my case as a vast use of coding toward dissertational exploration and study.  Also, thank you for the goal of not being fully \"complete, functional workflow,\" as fully bringiing in all influences challenges the process.  Where exploring elements to create a valued starting point toward future work references, is great! (Note where you have something working, and where it's broken or in progress).\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basics Assignment #1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basics Assignment #2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basics Assignment #3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basics Assignment #4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basics Assignment #5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basics Assignment #6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basics Assignment #7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basics Assignment #8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basics Assignment #9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basics Assignment #10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basics Assignment #11"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basics Assignment #12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basics Assignment #13"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basics Assignment #14"
    ]
   },
   {
@@ -241,6 +337,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Collection: Where is your data coming from?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Through IMDb data, the foster function responsible for iteration is derived. Now, extraction occurs and formulates. URL elements are then explored and filtered to push this journey forward. "
    ]
   },
@@ -285,6 +388,13 @@
     "        \n",
     "        image_id = image.get('data-tconst')\n",
     "        image_id_arr.append(image_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis: What techniques will you use to understand your data?"
    ]
   },
   {
@@ -445,6 +555,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##  Processing: How will you format and process your data?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In the end, the download function progresses our pursuit toward attaining the required and requested data."
    ]
   },
@@ -466,6 +583,13 @@
     "    \"image_url\": image_url_arr,\n",
     "    \"image_id\": image_id_arr,\n",
     "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualization: How will you visualize and explore your data?"
    ]
   },
   {
@@ -605,6 +729,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##  Dependencies: What modules will your project need? (#2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Then, moving on to help sybolize the process I wanted to explore IMDb's known avenue of Chart Toppers of film information.  Here it was expanded from \"bs4 import BeautifulSoup\" with the benefits of \"requests\" and \"re.\" Which helped the progress embark upon an URL focus \"http://www.imdb.com/chart/top.\" And allowed for a strategy to draw upon areas of interest and altered \"Movies, Links, Crew, Ratings, Votes, etc.\""
    ]
   },
@@ -624,7 +755,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Collection: Where is your data coming from? (#2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "(Downloading imdb top 250 movie's data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Collection: Where is your data coming from?"
    ]
   },
   {
@@ -650,6 +795,13 @@
     "crew = [a.attrs.get('title') for a in soup.select('td.titleColumn a')]\n",
     "ratings = [b.attrs.get('data-value') for b in soup.select('td.posterColumn span[name=ir]')]\n",
     "votes = [b.attrs.get('data-value') for b in soup.select('td.ratingColumn strong')]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Processing: How will you format and process your data? (#2)"
    ]
   },
   {
@@ -684,6 +836,13 @@
     "\t\t\t\"vote\": votes[index],\n",
     "\t\t\t\"link\": links[index]}\n",
     "\tlist.append(data)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis: What techniques will you use to understand your data? (#2)"
    ]
   },
   {
@@ -952,6 +1111,13 @@
     "for movie in list:\n",
     "    print(movie['place'], '-', movie['movie_title'], '('+movie['year'] +\n",
     "          ') -', 'Starring:', movie['star_cast'], movie['rating'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualization: How will you visualize and explore your data? (#2)"
    ]
   },
   {
@@ -1498,6 +1664,13 @@
    "metadata": {},
    "source": [
     "\"Word Cloud\" generates some frequencies and sees the visually impactful visionary displays as practical strategies for finding the maximum parameters in typical mixture models with \"Expectation maximization\" is common. The scikit-learn library provides a convenient way of estimating the parameters here as \"following lines of code suffice to estimate all the parameters of interest\" (Karsdorp, Kestemont, Riddell 291)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualization: How will you visualize and explore your data? (BONUS)"
    ]
   },
   {
