--- a/Assignment FINAL.ipynb
+++ b/Assignment FINAL.ipynb
@@ -22,6 +22,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### areas that brought interest\n",
+    "### then recommonded exploration -the Hollywood Reporter and IMDb (started)\n",
+    "### Then interest toward future (images bonus)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Basics Assignment #1"
    ]
   },
